--- a/app/static/locales/de.json
+++ b/app/static/locales/de.json
@@ -709,5 +709,7 @@
         "phone": "+49 7251 9295628"
       }
     }
-  }
+  },
+  "ticker-strong": "Jetzt neu!",
+  "ticker-content": "Carbon Kennzeichen und Rahmenlose Kennzeichen halter bei uns erhältlich"
 }
