--- a/app/static/locales/en.json
+++ b/app/static/locales/en.json
@@ -708,5 +708,8 @@
         "phone": "+49 7251 9295628"
       }
     }
-  }
+  },
+  "ticker-strong": "New arrival!",
+  "ticker-content": "Carbon license plates and frameless plate holders now available."
+
 }
