--- a/app/static/locales/ro.json
+++ b/app/static/locales/ro.json
@@ -706,5 +706,7 @@
         "phone": "+49 7251 9295628"
       }
     }
-  }
+  },
+  "ticker-strong": "Nou!",
+  "ticker-content": "Plăcuțe de înmatriculare din carbon și suporturi fără ramă disponibile la noi."
 }
