--- a/app/static/locales/it.json
+++ b/app/static/locales/it.json
@@ -706,5 +706,7 @@
         "phone": "+49 7251 9295628"
       }
     }
-  }
+  },
+  "ticker-strong": "Novità!",
+  "ticker-content": "Targhe in carbonio e supporti per targhe senza cornice disponibili da noi."
 }
