--- a/app/static/locales/de.json
+++ b/app/static/locales/de.json
@@ -174,6 +174,22 @@
         "strong": "Benötigte Dokumente für die Abmeldung:",
         "schein": "KFZ Schein",
         "plates": "KFZ Schilder"
+      },
+      "season": {
+        "title": "Saison Kennzeichen",
+        "strong": "Benötigte Dokumente für Saison Kennzeichen:",
+        "schein": "Zulassungsbescheinigung Teil 1 (Fahrzeugschein)",
+        "brief": "Zulassungsbescheinigung Teil 2 (Fahrzeugbrief)",
+        "evb": "eVB für Saison",
+        "idCopy": "Ausweiskopie",
+        "vollmacht": "Vollmacht und SEPA-Mandat"
+      },
+      "customs": {
+        "title": "Zollkennzeichen",
+        "strong": "Benötigte Dokumente für Zollkennzeichen:",
+        "note": "Je nach Fall gibt es unterschiedliche Anforderungen für Zollkennzeichen. Bitte ",
+        "link": "kontaktieren Sie uns",
+        "note2": "für eine individuelle Beratung zu Ihrem speziellen Fall."
       }
     }
   },
@@ -682,22 +698,22 @@
         "how_description": "Wir machen die KFZ-Zulassung einfacher denn je! Mit unserem neuen Service können Sie Ihre Fahrzeugunterlagen ganz bequem bei einem Kiosk, Schreibwarenladen oder ähnlichem Geschäft in Ihrer Nähe abgeben.",
         "steps_title": "So funktioniert es:",
         "steps": [
-            {
-                "title": "Unterlagen abgeben:",
-                "text": [
-                    "Bringen Sie Ihre Fahrzeugunterlagen zu einer unserer zahlreichen Annahmestellen in Ihrer Nähe.",
-                    "oder",
-                    "Abholung durch uns: Unser Fahrer holt die Unterlagen ab und bringt sie zu unserem Servicecenter."
-                ]
-            },
-            {
-                "title": "Bearbeitung:",
-                "text": "Wir bearbeiten Ihre KFZ-Zulassung schnell und zuverlässig."
-            },
-            {
-                "title": "Abholung:",
-                "text": "Bereits am nächsten Tag können Sie die zugelassenen Schilder und Papiere wieder an der gleichen Stelle abholen, an der Sie sie abgegeben haben."
-            }
+          {
+            "title": "Unterlagen abgeben:",
+            "text": [
+              "Bringen Sie Ihre Fahrzeugunterlagen zu einer unserer zahlreichen Annahmestellen in Ihrer Nähe.",
+              "oder",
+              "Abholung durch uns: Unser Fahrer holt die Unterlagen ab und bringt sie zu unserem Servicecenter."
+            ]
+          },
+          {
+            "title": "Bearbeitung:",
+            "text": "Wir bearbeiten Ihre KFZ-Zulassung schnell und zuverlässig."
+          },
+          {
+            "title": "Abholung:",
+            "text": "Bereits am nächsten Tag können Sie die zugelassenen Schilder und Papiere wieder an der gleichen Stelle abholen, an der Sie sie abgegeben haben."
+          }
         ],
         "note": "Kein lästiges Warten und keine langen Wege mehr – einfach, schnell und bequem!",
         "dropdown": "Deine Stadt auswählen"
