--- a/app/static/locales/it.json
+++ b/app/static/locales/it.json
@@ -174,6 +174,22 @@
         "strong": "Documenti per radiazione:",
         "schein": "Libretto parte I",
         "plates": "Targhe"
+      },
+      "season": {
+        "title": "Targa Stagionale",
+        "strong": "Documenti richiesti per targhe stagionali:",
+        "schein": "Certificato di immatricolazione Parte I",
+        "brief": "Certificato di immatricolazione Parte II",
+        "evb": "eVB per targa stagionale",
+        "idCopy": "Copia del documento d’identità",
+        "vollmacht": "Delega e mandato SEPA"
+      },
+      "customs": {
+        "title": "Targhe Doganali",
+        "strong": "Documenti richiesti per targhe doganali:",
+        "note": "A seconda del caso, ci sono diversi requisiti per le targhe doganali. Ti preghiamo di ",
+        "link": "contattarci",
+        "note2": "per una consulenza personalizzata sul tuo caso specifico."
       }
     }
   },
