update: checklist, announcement bar, mobile menu

--- a/app/static/locales/de.json
+++ b/app/static/locales/de.json
@@ -726,6 +726,6 @@
       }
     }
   },
-  "ticker-strong": "Jetzt neu!",
-  "ticker-content": "Carbon Kennzeichen und Rahmenlose Kennzeichen halter bei uns erhältlich"
+  "ticker-strong": "Neu!",
+  "ticker-content": "EXPRESS Auto Anmeldung in 10 Minuten Bundesweit auch an Sonntag - und Feiertagen"
 }
