--- a/app/static/locales/en.json
+++ b/app/static/locales/en.json
@@ -725,6 +725,6 @@
       }
     }
   },
-  "ticker-strong": "New arrival!",
-  "ticker-content": "Carbon license plates and frameless plate holders now available."
+  "ticker-strong": "New!",
+  "ticker-content": "EXPRESS car registration in 10 minutes – Nationwide, even on Sundays and public holidays."
 }
