--- a/app/static/locales/it.json
+++ b/app/static/locales/it.json
@@ -723,6 +723,6 @@
       }
     }
   },
-  "ticker-strong": "Novità!",
-  "ticker-content": "Targhe in carbonio e supporti per targhe senza cornice disponibili da noi."
+  "ticker-strong": "NUOVO!",
+  "ticker-content": "Registrazione auto EXPRESS in 10 minuti – In tutta la Germania, anche la domenica e nei giorni festivi"
 }
