--- a/app/static/locales/ro.json
+++ b/app/static/locales/ro.json
@@ -723,6 +723,6 @@
       }
     }
   },
-  "ticker-strong": "Nou!",
-  "ticker-content": "Plăcuțe de înmatriculare din carbon și suporturi fără ramă disponibile la noi."
+  "ticker-strong": "NOU!",
+  "ticker-content": "Înmatriculare auto EXPRESS în 10 minute – La nivel național, inclusiv duminica și în zilele de sărbătoare."
 }
