announcement bar updated

--- a/app/static/locales/de.json
+++ b/app/static/locales/de.json
@@ -727,5 +727,5 @@
     }
   },
   "ticker-strong": "Neu!",
-  "ticker-content": "EXPRESS Auto Anmeldung in 10 Minuten Bundesweit auch an Sonntag - und Feiertagen"
+  "ticker-content": "EXPRESS Auto Anmeldung in 10 Minuten Bundesweit auch an Sonn - und Feiertagen"
 }
